--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <button type="button" id="reset">RESET</button>
       </div>
     </div>
-    <footer>Ozan Muldur - Memory Game with JavaScript. </footer>
+    <footer>Coded by Ozan Muldur</footer>
    
     <script src="main.js"></script>
   </body>
